--- a/PetApp_Empresa/Views/Auth/Login.cshtml
+++ b/PetApp_Empresa/Views/Auth/Login.cshtml
@@ -10,6 +10,7 @@
             <div class="card-body">
                 <h2 class="text-center mb-4 text-white">Iniciar Sesión</h2>
                 <form asp-action="Login">
+                    <input type="hidden" name="returnUrl" value="@ViewData["ReturnUrl"]" />
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <div class="form-group">
                         <label asp-for="Nombre" class="control-label text-white">Usuario</label>
