--- a/PetApp_Empresa/Views/Shared/_Layout.cshtml
+++ b/PetApp_Empresa/Views/Shared/_Layout.cshtml
@@ -103,6 +103,11 @@
                                 <i class="fas fa-paw"></i> MisRefuios
                             </a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-controller="Refugios" asp-action="VerificarSolicitudes">
+                                <i class="fas fa-paw"></i> VerificarSolicitudes
+                            </a>
+                        </li>
                 }
                 @if (User.IsInRole("Admin") || User.IsInRole("Cliente"))
                 {
@@ -111,6 +116,12 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" asp-area="" asp-controller="Home" asp-action="DashboardCliente">Usuario</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" asp-area="" asp-controller="Adopciones" asp-action="MisAdopciones">MisAdopciones</a>
+                    </li>
+                    <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-controller="CarritoDeCompras" asp-action="HistorialCompras">HistorialCompras</a>
                     </li>
                 }
                 @if (User.IsInRole("Admin") || User.IsInRole("Vendedor"))
